--- a/fix-defects/libp2p/protocols/pubsub/floodsub.html
+++ b/fix-defects/libp2p/protocols/pubsub/floodsub.html
@@ -208,7 +208,7 @@ window.addEventListener("DOMContentLoaded", main2);
       <li><a class="reference" href="#FloodSub"
     title="FloodSub {.public.} = ref object of PubSub
   floodsub*: PeerTable
-  seen*: TimedCache[MessageID]
+  seen*: TimedCache[MessageId]
   seenSalt*: seq[byte]">FloodSub</a></li>
 
   </ul>
@@ -225,13 +225,13 @@ window.addEventListener("DOMContentLoaded", main2);
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
       <ul class="simple nested-toc-section">addSeen
-      <li><a class="reference" href="#addSeen%2CFloodSub%2CMessageID"
-    title="addSeen(f: FloodSub; msgId: MessageID): bool">addSeen(f: FloodSub; msgId: MessageID): bool</a></li>
+      <li><a class="reference" href="#addSeen%2CFloodSub%2CMessageId"
+    title="addSeen(f: FloodSub; msgId: MessageId): bool">addSeen(f: FloodSub; msgId: MessageId): bool</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">firstSeen
-      <li><a class="reference" href="#firstSeen%2CFloodSub%2CMessageID"
-    title="firstSeen(f: FloodSub; msgId: MessageID): Moment">firstSeen(f: FloodSub; msgId: MessageID): Moment</a></li>
+      <li><a class="reference" href="#firstSeen%2CFloodSub%2CMessageId"
+    title="firstSeen(f: FloodSub; msgId: MessageId): Moment">firstSeen(f: FloodSub; msgId: MessageId): Moment</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">handleSubscribe
@@ -240,8 +240,8 @@ window.addEventListener("DOMContentLoaded", main2);
 
   </ul>
   <ul class="simple nested-toc-section">hasSeen
-      <li><a class="reference" href="#hasSeen%2CFloodSub%2CMessageID"
-    title="hasSeen(f: FloodSub; msgId: MessageID): bool">hasSeen(f: FloodSub; msgId: MessageID): bool</a></li>
+      <li><a class="reference" href="#hasSeen%2CFloodSub%2CMessageId"
+    title="hasSeen(f: FloodSub; msgId: MessageId): bool">hasSeen(f: FloodSub; msgId: MessageId): bool</a></li>
 
   </ul>
 
@@ -302,7 +302,7 @@ class="link-seesrc" target="_blank">Source</a>
 <div id="FloodSub" class="tohide">
 <dt><pre><a href="floodsub.html#FloodSub"><span class="Identifier">FloodSub</span></a> {.<span class="Identifier">public</span>.} <span class="Other">=</span> <span class="Keyword">ref</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <a href="pubsub.html#PubSub"><span class="Identifier">PubSub</span></a>
   <span class="Identifier">floodsub</span><span class="Operator">*</span><span class="Other">:</span> <a href="peertable.html#PeerTable"><span class="Identifier">PeerTable</span></a>
-  <span class="Identifier">seen</span><span class="Operator">*</span><span class="Other">:</span> <a href="timedcache.html#TimedCache"><span class="Identifier">TimedCache</span></a><span class="Other">[</span><a href="rpc/messages.html#MessageID"><span class="Identifier">MessageID</span></a><span class="Other">]</span>
+  <span class="Identifier">seen</span><span class="Operator">*</span><span class="Other">:</span> <a href="timedcache.html#TimedCache"><span class="Identifier">TimedCache</span></a><span class="Other">[</span><a href="rpc/messages.html#MessageId"><span class="Identifier">MessageId</span></a><span class="Other">]</span>
   <span class="Identifier">seenSalt</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span>
 </pre></dt>
 <dd>
@@ -337,8 +337,8 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<div id="addSeen,FloodSub,MessageID" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#addSeen%2CFloodSub%2CMessageID"><span class="Identifier">addSeen</span></a><span class="Other">(</span><span class="Identifier">f</span><span class="Other">:</span> <a href="floodsub.html#FloodSub"><span class="Identifier">FloodSub</span></a><span class="Other">;</span> <span class="Identifier">msgId</span><span class="Other">:</span> <a href="rpc/messages.html#MessageID"><span class="Identifier">MessageID</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<div id="addSeen,FloodSub,MessageId" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#addSeen%2CFloodSub%2CMessageId"><span class="Identifier">addSeen</span></a><span class="Other">(</span><span class="Identifier">f</span><span class="Other">:</span> <a href="floodsub.html#FloodSub"><span class="Identifier">FloodSub</span></a><span class="Other">;</span> <span class="Identifier">msgId</span><span class="Other">:</span> <a href="rpc/messages.html#MessageId"><span class="Identifier">MessageId</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
@@ -349,8 +349,8 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
-<div id="firstSeen,FloodSub,MessageID" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#firstSeen%2CFloodSub%2CMessageID"><span class="Identifier">firstSeen</span></a><span class="Other">(</span><span class="Identifier">f</span><span class="Other">:</span> <a href="floodsub.html#FloodSub"><span class="Identifier">FloodSub</span></a><span class="Other">;</span> <span class="Identifier">msgId</span><span class="Other">:</span> <a href="rpc/messages.html#MessageID"><span class="Identifier">MessageID</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Moment</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<div id="firstSeen,FloodSub,MessageId" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#firstSeen%2CFloodSub%2CMessageId"><span class="Identifier">firstSeen</span></a><span class="Other">(</span><span class="Identifier">f</span><span class="Other">:</span> <a href="floodsub.html#FloodSub"><span class="Identifier">FloodSub</span></a><span class="Other">;</span> <span class="Identifier">msgId</span><span class="Other">:</span> <a href="rpc/messages.html#MessageId"><span class="Identifier">MessageId</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Moment</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
@@ -375,8 +375,8 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
-<div id="hasSeen,FloodSub,MessageID" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#hasSeen%2CFloodSub%2CMessageID"><span class="Identifier">hasSeen</span></a><span class="Other">(</span><span class="Identifier">f</span><span class="Other">:</span> <a href="floodsub.html#FloodSub"><span class="Identifier">FloodSub</span></a><span class="Other">;</span> <span class="Identifier">msgId</span><span class="Other">:</span> <a href="rpc/messages.html#MessageID"><span class="Identifier">MessageID</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<div id="hasSeen,FloodSub,MessageId" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#hasSeen%2CFloodSub%2CMessageId"><span class="Identifier">hasSeen</span></a><span class="Other">(</span><span class="Identifier">f</span><span class="Other">:</span> <a href="floodsub.html#FloodSub"><span class="Identifier">FloodSub</span></a><span class="Other">;</span> <span class="Identifier">msgId</span><span class="Other">:</span> <a href="rpc/messages.html#MessageId"><span class="Identifier">MessageId</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
@@ -466,7 +466,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-07-27 12:46:33 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-08-02 15:18:48 UTC</small>
       </div>
     </div>
   </div>
