--- a/fix-defects/libp2p/protocols/pubsub/rpc/messages.html
+++ b/fix-defects/libp2p/protocols/pubsub/rpc/messages.html
@@ -207,14 +207,14 @@ window.addEventListener("DOMContentLoaded", main2);
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#ControlGraft"
     title="ControlGraft = object
-  topicID*: string">ControlGraft</a></li>
+  topicId*: string">ControlGraft</a></li>
   <li><a class="reference" href="#ControlIHave"
     title="ControlIHave = object
-  topicID*: string
-  messageIDs*: seq[MessageID]">ControlIHave</a></li>
+  topicId*: string
+  messageIds*: seq[MessageId]">ControlIHave</a></li>
   <li><a class="reference" href="#ControlIWant"
     title="ControlIWant = object
-  messageIDs*: seq[MessageID]">ControlIWant</a></li>
+  messageIds*: seq[MessageId]">ControlIWant</a></li>
   <li><a class="reference" href="#ControlMessage"
     title="ControlMessage = object
   ihave*: seq[ControlIHave]
@@ -223,7 +223,7 @@ window.addEventListener("DOMContentLoaded", main2);
   prune*: seq[ControlPrune]">ControlMessage</a></li>
   <li><a class="reference" href="#ControlPrune"
     title="ControlPrune = object
-  topicID*: string
+  topicId*: string
   peers*: seq[PeerInfoMsg]
   backoff*: uint64">ControlPrune</a></li>
   <li><a class="reference" href="#Message"
@@ -231,11 +231,11 @@ window.addEventListener("DOMContentLoaded", main2);
   fromPeer*: PeerId
   data*: seq[byte]
   seqno*: seq[byte]
-  topicIDs*: seq[string]
+  topicIds*: seq[string]
   signature*: seq[byte]
   key*: seq[byte]">Message</a></li>
-  <li><a class="reference" href="#MessageID"
-    title="MessageID = seq[byte]">MessageID</a></li>
+  <li><a class="reference" href="#MessageId"
+    title="MessageId = seq[byte]">MessageId</a></li>
   <li><a class="reference" href="#PeerInfoMsg"
     title="PeerInfoMsg = object
   peerId*: PeerId
@@ -303,7 +303,7 @@ class="link-seesrc" target="_blank">Source</a>
 <dl class="item">
 <div id="ControlGraft" class="tohide">
 <dt><pre><a href="messages.html#ControlGraft"><span class="Identifier">ControlGraft</span></a> <span class="Other">=</span> <span class="Keyword">object</span>
-  <span class="Identifier">topicID</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">string</span>
+  <span class="Identifier">topicId</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">string</span>
 </pre></dt>
 <dd>
 
@@ -317,8 +317,8 @@ class="link-seesrc" target="_blank">Source</a>
 </div>
 <div id="ControlIHave" class="tohide">
 <dt><pre><a href="messages.html#ControlIHave"><span class="Identifier">ControlIHave</span></a> <span class="Other">=</span> <span class="Keyword">object</span>
-  <span class="Identifier">topicID</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">string</span>
-  <span class="Identifier">messageIDs</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><a href="messages.html#MessageID"><span class="Identifier">MessageID</span></a><span class="Other">]</span>
+  <span class="Identifier">topicId</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">string</span>
+  <span class="Identifier">messageIds</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><a href="messages.html#MessageId"><span class="Identifier">MessageId</span></a><span class="Other">]</span>
 </pre></dt>
 <dd>
 
@@ -332,7 +332,7 @@ class="link-seesrc" target="_blank">Source</a>
 </div>
 <div id="ControlIWant" class="tohide">
 <dt><pre><a href="messages.html#ControlIWant"><span class="Identifier">ControlIWant</span></a> <span class="Other">=</span> <span class="Keyword">object</span>
-  <span class="Identifier">messageIDs</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><a href="messages.html#MessageID"><span class="Identifier">MessageID</span></a><span class="Other">]</span>
+  <span class="Identifier">messageIds</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><a href="messages.html#MessageId"><span class="Identifier">MessageId</span></a><span class="Other">]</span>
 </pre></dt>
 <dd>
 
@@ -363,7 +363,7 @@ class="link-seesrc" target="_blank">Source</a>
 </div>
 <div id="ControlPrune" class="tohide">
 <dt><pre><a href="messages.html#ControlPrune"><span class="Identifier">ControlPrune</span></a> <span class="Other">=</span> <span class="Keyword">object</span>
-  <span class="Identifier">topicID</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">string</span>
+  <span class="Identifier">topicId</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">string</span>
   <span class="Identifier">peers</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><a href="messages.html#PeerInfoMsg"><span class="Identifier">PeerInfoMsg</span></a><span class="Other">]</span>
   <span class="Identifier">backoff</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">uint64</span>
 </pre></dt>
@@ -382,7 +382,7 @@ class="link-seesrc" target="_blank">Source</a>
   <span class="Identifier">fromPeer</span><span class="Operator">*</span><span class="Other">:</span> <a href="../../../peerid.html#PeerId"><span class="Identifier">PeerId</span></a>
   <span class="Identifier">data</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span>
   <span class="Identifier">seqno</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span>
-  <span class="Identifier">topicIDs</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span>
+  <span class="Identifier">topicIds</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span>
   <span class="Identifier">signature</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span>
   <span class="Identifier">key</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span>
 </pre></dt>
@@ -396,8 +396,8 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
-<div id="MessageID" class="tohide">
-<dt><pre><a href="messages.html#MessageID"><span class="Identifier">MessageID</span></a> <span class="Other">=</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span></pre></dt>
+<div id="MessageId" class="tohide">
+<dt><pre><a href="messages.html#MessageId"><span class="Identifier">MessageId</span></a> <span class="Other">=</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span></pre></dt>
 <dd>
 
 
@@ -566,7 +566,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-07-27 12:46:32 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-08-02 15:18:48 UTC</small>
       </div>
     </div>
   </div>
